k8s-wordpress-myql-project/k8s-manifest/api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-api
spec:
   podSelector:
        matchLabels:
           tier: mysql
   ingress:
   - from:
       - podSelector:
            matchLabels:
              tier: frontend
